# HRNet-Facial-Landmark-Detection

./: LICENSE  README.md  pyproject.toml  requirements.txt
experiments/300w/: face_alignment_300w_hrnet_test.yaml
lib/core/: evaluation.py
lib/datasets/: aflw.py  cofw.py  face300w.py
lib/utils/: transforms.py
src/seyeon/hrnet_facial_landmark_detection/core/: function.py
src/seyeon/hrnet_facial_landmark_detection/datasets/: __init__.py  aligned.py  wflw.py
src/seyeon/hrnet_facial_landmark_detection/models/: hrnet.py
src/seyeon/hrnet_facial_landmark_detection/utils/: transforms.py  utils.py
tools/: test.py  train.py  visualize_predictions.py
